hw5_lab8/tests/errors/sem_or_non_boolean.kt
// EXPECT: semantic error — || on non-Boolean
fun main() {
    val r = "a" || "b"
}
